--- a/materio/javascript-version/full-version/package.json
+++ b/materio/javascript-version/full-version/package.json
@@ -31,6 +31,7 @@
     "@iconify/react": "4.0.0",
     "@mui/lab": "5.0.0-alpha.105",
     "@mui/material": "5.10.11",
+    "@mui/styles": "^5.15.16",
     "@mui/x-data-grid": "5.17.9",
     "@popperjs/core": "2.11.6",
     "@reduxjs/toolkit": "1.8.6",
